# Simulator_back

./: .dockerignore  API_DOCUMENTATION.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: dependency.py  exception.py  logger.py  main.py  settings.py
app/auth/: __init__.py  handlers.py
app/models/: __init__.py
app/models/isotropic/: handlers.py  shema.py
app/modules/: __init__.py  cache.py  exception.py  service.py  solver.py
app/modules/anisotropic/: ANISOTROPIC_README.md  __init__.py  anisotropic_cache.py  anisotropic_dependency.py  handlers.py  server.py  service.py  shema.py
app/modules/anisotropic/solver/: __init__.py  anisotropic_solver.py  config.py  evaluator.py  models.py  optimizer.py  parameter_optimizer.py  solver.py
app/modules/isotropic/: dependecy.py  handlers.py  isotropic_cache.py  isotropic_dependency.py  server.py  service.py  shema.py  tmp_storage.py
app/modules/isotropic/energy/: __init__.py  energy_info.py  make_energy.py
app/modules/isotropic/solver/: __init__.py  config.py  error_function.py  generate_energy.py  hyperelastic_model.py  optimizer.py  shema.py  solver.py  stress_calculator.py
app/storage/database/: accessor.py
app/storage/redis/: accessor.py
config/: logging.conf.yml
monitoring/: collection_metrics.py  prometheus.yml
monitoring/sentry/: __init__.py  sentry_sdk.py
tests/: test.energy
